force-app/main/default/objects/smagicinteract__Template_Channel_Map__c/smagicinteract__Template_Channel_Map__c.object-meta.xml
<CustomObject>
    <description>Junction object between template and channel master.</description>
    <label>Template Channel Map</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Template Channels Map</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>