force-app/main/default/objects/smagicinteract__Template_Channel_Map__c/fields/smagicinteract__Channel_Master__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Channel_Master__c</fullName>
    <label>Channel Master</label>
    <referenceTo>smagicinteract__Channel_Master__c</referenceTo>
    <relationshipLabel>Template Channels Map</relationshipLabel>
    <relationshipName>Template_Channels_Map</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>