force-app/main/default/objects/smagicinteract__Template_Channel_Map__c/fields/smagicinteract__Converse_Template__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Converse_Template__c</fullName>
    <label>Converse Template</label>
    <referenceTo>smagicinteract__SMS_Template__c</referenceTo>
    <relationshipLabel>Template Channels Map</relationshipLabel>
    <relationshipName>Template_Channels_Map</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>