force-app/main/default/objects/smagicinteract__Template_Channel_Map__c/fields/smagicinteract__Meta_Info__c.field-meta.xml
<CustomField>
    <fullName>smagicinteract__Meta_Info__c</fullName>
    <description>JSON representation of the metadata information required for the channel.</description>
    <label>Meta Info</label>
    <type>TextArea</type>
</CustomField>